--- a/src/styles/pages/_menu.scss
+++ b/src/styles/pages/_menu.scss
@@ -13,7 +13,7 @@
 
 .category-title {
     text-transform: uppercase;
-    font-size: 3rem;
+    font-size: 2.5rem;
     color: $accent;
 }
 
@@ -21,7 +21,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 2rem;
+    gap: .8rem;
 
     .food-list {
         width: 100%;
@@ -105,11 +105,11 @@
         width: 100%;
         display: flex;
         flex-direction: column;
-        gap: 3rem;
+        align-items: center;
+        gap: 1rem;
 
         .fattah-item, .fattah-item-2 {
 
-            
             .info-container {
                 display: flex;
                 flex-direction: column;
@@ -121,12 +121,13 @@
                     text-align: center;
 
                     .main-title {
-                        font-size: 2.2rem;
+                        font-size: 1.7rem;
+                        font-weight: bold;
                         color: white;
                     }
 
                     .secondary-title {
-                        font-size: 1.5rem;
+                        font-size: 1.2rem;
                         color: white;
                     }
                 }
@@ -143,12 +144,12 @@
 
                     .size {
                         color: $accent;
-                        font-size: 1.4rem;
+                        font-size: 1.2rem;
                     }
 
                     .price {
                         text-align: center;
-                        font-size: 2.3rem;
+                        font-size: 1.7rem;
                         font-weight: 900;
 
                         .currency {
@@ -165,16 +166,16 @@
 
 
         .fattah-item {
-            width: 100%;
+            width: 80%;
             display: flex;
             gap: 1rem;
-            line-height: 3rem;
+            line-height: 2rem;
 
            .image-container {
 
                 img {
                     width: 100%;
-                    max-height: 180px;
+                    max-height: 140px;
                     aspect-ratio: 16/9;
                     object-fit: cover;
                     border-radius: .9rem;
@@ -195,47 +196,54 @@
         }
 
         .fattah-item-2 {
-            position: relative;
-            background-color: $accent;
-            padding: 2rem;
-            border-radius: 2rem;
+            width: 80%;
             display: flex;
-            max-width: 70%;
+            line-height: 2rem;
  
-            .prices-container {
+            .info-container {
+                width: max(50%, 400px);
+                padding: 1.3rem;
+                position: relative;
+                background-color: $accent;
+                border-radius: 2rem;
 
-                .price-item {
+                .prices-container {
+    
+                    .price-item {
 
-                    .size {
-                        color: white;
-                    }
-
-                    .price {
-                        color: white;
-
-                        .currency {
-                            font-size: 1.2rem;
+                        padding-inline: 1.4rem;
+    
+                        .size {
+                            color: white;
+                        }
+    
+                        .price {
+                            color: white;
+    
+                            .currency {
+                                font-size: 1.2rem;
+                            }
                         }
                     }
-                }
-
-                .price-item:not(:last-child) {
-                    border-color: white;
-                }
-            } 
-            
-            .image-container {
-                position: absolute;
-                top: 50%;
-                right: -15%;
-                transform: translateY(-50%);
-
-                img {
-                    width: 100%;
-                    max-height: 180px;
-                    aspect-ratio: 16/9;
-                    object-fit: cover;
-                    border-radius: .9rem;
+    
+                    .price-item:not(:last-child) {
+                        border-color: white;
+                    }
+                } 
+                            
+                .image-container {
+                    position: absolute;
+                    top: 50%;
+                    right: -45%;
+                    transform: translateY(-50%);
+    
+                    img {
+                        width: 100%;
+                        max-height: 140px;
+                        aspect-ratio: 16/9;
+                        object-fit: cover;
+                        border-radius: .9rem;
+                    }
                 }
             }
 
@@ -255,17 +263,28 @@
 
         .title-container {
             display: flex;
-            flex-direction: column;
-            text-align: right;
-
-            .main-title {
-                font-weight: 900;
-                font-size: 1.4rem;
+            
+            > div {
+                display: flex;
+                flex-direction: column;
+                text-align: right;
+                padding-inline: 1rem;
+                line-height: 2.1rem;
+    
+                .main-title {
+                    font-weight: 900;
+                    font-size: 1.3rem;
+                }
+    
+                .secondary-title {
+                    font-weight: 600;
+                    font-size: 1rem;
+                }
             }
 
-            .secondary-title {
-                font-weight: 600;
-                font-size: 1rem;
+            .seperator {
+                margin-top: .05rem;
+                font-size: 1.3rem;
             }
         }
 
@@ -337,100 +356,69 @@
     }
 }
 
-.information-page {
-    width: 90%;
-    margin: 0 auto;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 3rem;
-}
-
-.company-info {
-    display: flex;
-    height: 100vh;
-    flex-direction: column;
-    gap: 2rem;
-    justify-content: flex-end;
-
-    .shape {
-        position: relative;
-        left: -15%;
-        width: max(40vw, 800px);
-        height: max(60vh, 1000px);
-    }
-
-    .socials {
-        display: flex;
-        align-items: center;
-        gap: 2rem;
-
-        .qr-code {
-            height: min(100%, 150px);
-            aspect-ratio: 1;
-            background-color: black;
-            color: white;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            font-size: 1.2rem;
-        }
-    
-        .hotline {
-            line-height: 4rem;
-            text-align: center;
-    
-            h3 {
-                font-size: 2.5rem;
-                color: $accent;
-            }
-            
-            span {
-                font-size: 5rem;
-                font-weight: bolder;
-            }
-        }
-
-        .social-accounts {
-            display: flex;
-            flex-direction: column;
-            justify-content: flex-end;
-            > div {
-                display: flex;
-                align-items: flex-end;
-                gap: .2rem;
-
-                svg {
-                    font-size: 1.3rem;
-                    color: $accent
-                }
-            }
-        }
-
-    }
-
-    .addresses {
-
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        align-items: flex-end;
-        gap: .4rem;
-
-        > div {
-            float: left;
-            display: flex;
-            gap: .3rem;
-            font-size: 1.2rem;
-
-            svg {
-                color: $accent;
-                font-size: 2rem;    
-            }
-        }
-    }
-}
 
 .text-accent {
     color: $accent;
+}
+
+.company-info {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 2rem;
+    margin-top: -3%;
+
+    .hotline {
+        line-height: 3rem;
+        text-align: center;
+
+        h3 {
+            font-size: 2rem;
+            color: $accent;
+        }
+        
+        span {
+            font-size: 4rem;
+            font-weight: bolder;
+        }
+    }
+
+    .social-accounts {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+        > div {
+            display: flex;
+            align-items: center;
+            gap: .35rem;
+
+            svg {
+                font-size: 1.6rem;
+                color: $accent
+            }
+        }
+
+        span {
+            font-size: 1.1rem;
+        }
+    }
+
+    .apps {
+        display: flex;
+        align-items: center;
+
+        img {
+            width: 200px;
+
+            &.apple-store-badge {
+                width: 165px;
+            }
+        }
+        
+    }
+
 }
 
 
