--- a/src/styles/pages/_menu.scss
+++ b/src/styles/pages/_menu.scss
@@ -38,7 +38,7 @@
                 img {
                     width: 200px;
                     height: 100px;
-                    object-fit: cover;
+                    object-fit: contain;
                     border-radius: .9rem;
                 }
             }
@@ -177,7 +177,7 @@
                     width: 100%;
                     max-height: 140px;
                     aspect-ratio: 16/9;
-                    object-fit: cover;
+                    object-fit: contain;
                     border-radius: .9rem;
                 }
             }
